<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/activity_intro_slider_scene"
    tools:context=".ui.IntroSlider">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bahasaIndo"
        android:layout_width="318dp"
        android:layout_height="94dp"
        android:background="@drawable/shape_rounded"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3">

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:id="@+id/flag"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginStart="17dp"
            android:src="@drawable/indonesia"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="37dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/bahasa_indonesia"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/flag"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bahasaEng"
        android:layout_width="0dp"
        android:layout_height="94dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/shape_rounded"
        app:layout_constraintEnd_toEndOf="@+id/bahasaIndo"
        app:layout_constraintStart_toStartOf="@+id/bahasaIndo"
        app:layout_constraintTop_toBottomOf="@+id/bahasaIndo">

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:id="@+id/flag2"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginStart="17dp"
            android:src="@drawable/uk"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="37dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/english"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/flag2"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/what_is_your_name"
        android:textColor="#396F92"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3"
        android:layout_marginStart="25dp"/>

    <EditText
        android:id="@+id/et_userName"
        android:layout_width="322dp"
        android:layout_height="67dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="15dp"
        android:background="@drawable/shp_edt"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center"
        android:hint="@string/write_here"
        android:maxLength="10"
        android:textColorHint="#C4C4C4"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="@+id/tvName"
        app:layout_constraintStart_toStartOf="@+id/tvName"
        app:layout_constraintTop_toBottomOf="@+id/tvName" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_userName"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginTop="85dp"
        android:background="@drawable/shp_btn"
        android:fontFamily="@font/poppins_bold"
        android:hint="@string/next"
        android:textColorHint="@color/white"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="@+id/et_userName"
        app:layout_constraintStart_toStartOf="@+id/et_userName"
        app:layout_constraintTop_toBottomOf="@+id/et_userName" />




</androidx.constraintlayout.motion.widget.MotionLayout>